2014-11-06  Kaz Kylheku  <kaz@kylheku.com>

	Allow then-func to be omitted in iff. Cleanup.

	* eval.c (eval_init): Register iff as requiring only one arg.

	* lib.c (do_iff): Do not check thenfun for nil. Just call it.
	(iff): Default thenfun to identity.

	* txr.1: Documentation updated.

2014-11-05  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (iff): Bugfix: forgotten handling of default
	argument, resulting in : symbol being called as a function.

	* txr.1: Removing description of situation when the then-function
	argument of iff or iffi is specified as nil. This is deprecated
	behavior which can be obtained by using the false function.

2014-10-31  Kaz Kylheku  <kaz@kylheku.com>

	New macros tb and tc.

	* eval.c (me_tb, me_tc): New static functions.
	(eval_init): Registered tb and tc macros.

	* txr.1: Documented tb and tc.

2014-10-30  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (chk_grow_vec): New function.
	(string_extend): Use chk_grow_vec.
	(vec_set_length): Avoid subtractions for comparing numbers.

	* lib.h (chk_grow_vec): Declared.

	* stream.c (snarf_line, string_out_put_string): Use chk_grow_vec.

2014-10-30  Kaz Kylheku  <kaz@kylheku.com>

	Implementing finalization hooks.

	* gc.c (struct fin_reg): New struct type.
	(final_list, final_tail, mark_makefresh): New static variables.
	(mark_obj): Under generational GC, if make_makefresh is in
	effect, set the generation to -1 on all marked objects.
	(sweep_one): In an EXTRA_DEBUGGING  build, call breakpt
	if the object being swept is the one in break_obj.
	Under generational GC, place reachable objects that are
	in generation -1 the freshobj nursery and assign them to generation 0,
	rather than sticking them into the mature generation 1.
	(sweep): Under generational gc, reset the freshobj_idx variable
	here, so that sweep_one has an empty nursery in which
	to place the generation -1 objects.
	(prepare_finals, call_finals): New static functions.
	(gc): Call prepare_finals before sweep, and call call_finals